[CORRECTION] Ajoute un flex-wrap
… pour que les images Annexe 1 et Annexe 2 passent à la ligne en mobile.

--- a/anssi-nis2-ui/src/style/directive.scss
+++ b/anssi-nis2-ui/src/style/directive.scss
@@ -359,6 +359,7 @@
   .annexes {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     a {
       background: none;
       &:after {
